--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button onclick=rollDice() class="button1">Roll Dice</button>
+  <button onclick=rollDice() class="button1">Rodar o Dado</button>
+
+  <p id="roll1">Jogador 1 : Azul | Jogador 2 : Verde </p>
 <div id=board>
 </div>
+
 
 </body>
 <script  src="jogo.js"></script>
