--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Team Assignment 2</title>
+  <title>KING</title>
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
