--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 <div id=board>
 </div>
 
+<div class="popup">
+  
+  <div class="popup-content">
+
+    <h4 class="roll2">.</h4>
+
+    <h4 class="pergunta"></h4>
+
+    <input class="input"  type="text" placeholder="Responda corretamente para continuar...">
+
+    <br><br><br><br><br><br><br>
+
+    <a  class="button2"> Responder </a>
+
+    </div>
+
+</div>
+
 
 </body>
 <script  src="jogo.js"></script>
