--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
   <button onclick=rollDice() class="button1">Rodar o Dado</button>
 
-  <p id="roll1">Jogador 1 : Azul | Jogador 2 : Verde </p>
+
+  <p class="title"> KING </p>
+ 
+ 
+ 
+  <p id="roll1">Jogador 1 : Vermelho | Jogador 2 : Laranja </p>
+
+  <br> <br>
 <div id=board>
 </div>
 
