--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
  
  
-  <p id="roll1">Jogador 1 : Vermelho | Jogador 2 : Laranja </p>
+  <p id="roll">Jogador 1 : Vermelho | Jogador 2 : Laranja </p>
 
   <br> <br>
 <div id=board>
@@ -23,15 +23,15 @@
   
   <div class="popup-content">
 
-    <h4 class="roll2">.</h4>
+    <h4 class="rollPanel">.</h4>
 
     <h4 class="pergunta"></h4>
 
-    <input class="input"  type="text" placeholder="Responda corretamente para continuar...">
+    <input id="input"  type="text">
 
     <br><br><br><br><br><br><br>
 
-    <a  class="button2"> Responder </a>
+    <a  class="answerButton"> Responder </a>
 
     </div>
 
