--- a/initialPage.html
+++ b/initialPage.html
@@ -21,7 +21,7 @@ Projeto de Algoritmia</h5>
     <br>
 
 
-    <a class="button4"> INSTRUÇÕES </a>
+    <a class="button4" onclick="Go2()"> INSTRUÇÕES </a>
 
 
 
@@ -39,8 +39,12 @@ Projeto de Algoritmia</h5>
 
 <script>
     function Go() {
-        location.replace("index.html")
+        location.replace("index.html")}
+
+    function Go2() {
+        location.replace("instructions.html")
     }
+    
 </script>
 </html>
 
