--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <br><br><br><br><br><br><br>
 
-    <a  class="answerButton"> Responder </a>
+    <button type="submit"  id="answerButton" onclick="resposta()" > Responder </button>
 
     </div>
 
